--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
       run: nuget restore EasyXrm.sln
  
     - name: Build Lib & pack
-      run: msbuild EasyXrm/EasyXrm.csproj -t:Restore /p:Configuration=Release -t:pack /p:Version=${steps.get_version.outputs.version-without-v} /p:PackageVersion=${steps.get_version.outputs.version-without-v}
+      run: msbuild EasyXrm/EasyXrm.csproj -t:Restore /p:Configuration=Release -t:pack /p:Version=${{steps.get_version.outputs.version-without-v}} /p:PackageVersion=${{steps.get_version.outputs.version-without-v}}
             
     - name: nuget push
-      run: nuget push Foobar/bin/Release/EasyXrm.${steps.get_version.outputs.version-without-v}.nupkg ${{secrets.NUGET_API_KEY}} -Source https://api.nuget.org/v3/index.json
+      run: nuget push Foobar/bin/Release/EasyXrm.${{steps.get_version.outputs.version-without-v}}.nupkg ${{secrets.NUGET_API_KEY}} -Source https://api.nuget.org/v3/index.json
