--- a/EasyXrm/EasyXrm.csproj
+++ b/EasyXrm/EasyXrm.csproj
@@ -34,26 +34,57 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Xrm.Sdk.Workflow">
+      <HintPath>..\packages\Microsoft.CrmSdk.Workflow.9.0.0.5\lib\net452\Microsoft.Xrm.Sdk.Workflow.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Activities" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies">
       <Version>9.0.2.42</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.CrmSdk.Workflow">
+      <Version>9.0.0.5</Version>
+    </PackageReference>
     <PackageReference Include="NuGet.Build.Tasks.Pack" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChangeTracking\ChangeTracker.cs" />
     <Compile Include="ChangeTracking\ChangeTrackedOrganizationService.cs" />
+    <Compile Include="Contracts\ICrmRepository.cs" />
+    <Compile Include="Extensions\EasyPluginContextExtensions.cs" />
+    <Compile Include="Extensions\EntityCollectionExtensions.cs" />
+    <Compile Include="Extensions\EntityExtensions.cs" />
+    <Compile Include="Extensions\EntityReferenceExtensions.cs" />
+    <Compile Include="Extensions\EnumerationExtensions.cs" />
+    <Compile Include="Extensions\OptionSetValueExtensions.cs" />
+    <Compile Include="Extensions\OrganizationServiceExtensions\OrganizationServiceExtensions.cs" />
+    <Compile Include="Extensions\OrganizationServiceExtensions\OrganizationServiceRetrieveMultipleExtensions.cs" />
+    <Compile Include="Extensions\OrganizationServiceExtensions\OrganizationServiceRetrieveExtensions.cs" />
+    <Compile Include="Extensions\OrganizationServiceExtensions\OrganizationServiceCreateExtensions.cs" />
+    <Compile Include="Extensions\OrganizationServiceExtensions\OrganizationServiceDeleteExtensions.cs" />
+    <Compile Include="Extensions\OrganizationServiceFactoryExtensions.cs" />
+    <Compile Include="Extensions\QueryBuilderExtensions.cs" />
+    <Compile Include="Extensions\ServiceProviderExtensions.cs" />
+    <Compile Include="Models\Enumeration.cs" />
+    <Compile Include="Plugins\AsyncEasyPluginBase.cs" />
+    <Compile Include="Plugins\EasyPluginBase.cs" />
+    <Compile Include="Plugins\EasyPluginContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\ColumnSet.cs" />
+    <Compile Include="Query\ConditionExpression.cs" />
+    <Compile Include="Query\QueryBuilding\FilterBuilder.cs" />
+    <Compile Include="Query\QueryBuilding\QueryBuilder.cs" />
+    <Compile Include="Utilities\LogicalName.cs" />
+    <Compile Include="Workflows\EasyWorkflowBase.cs" />
+    <Compile Include="Workflows\EasyWorkflowContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Extensions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\NuGet.Build.Tasks.Pack.6.0.0\build\NuGet.Build.Tasks.Pack.targets" Condition="Exists('..\packages\NuGet.Build.Tasks.Pack.6.0.0\build\NuGet.Build.Tasks.Pack.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
